[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Rakugo/tools/SceneLinkEdit.gd" type="Script" id=1]

[node name="SceneLinkEdit" type="HBoxContainer"]
margin_right = 1015.0
margin_bottom = 22.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Scene"

[node name="SceneEdit" type="LineEdit" parent="."]
margin_left = 42.0
margin_right = 337.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Choose" type="Button" parent="."]
margin_left = 341.0
margin_right = 525.0
margin_bottom = 24.0
text = "Choose Form Open Scenes"

[node name="Menu" type="PopupMenu" parent="Choose"]
margin_left = -5.0
margin_top = 31.0
margin_right = 187.0
margin_bottom = 178.0

[node name="Browse" type="Button" parent="."]
margin_left = 529.0
margin_right = 630.0
margin_bottom = 24.0
text = "Browse Scene"

[node name="Label2" type="Label" parent="."]
margin_left = 634.0
margin_top = 5.0
margin_right = 647.0
margin_bottom = 19.0
text = "Id"

[node name="IdEdit" type="LineEdit" parent="."]
margin_left = 651.0
margin_right = 946.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Remove" type="Button" parent="."]
margin_left = 950.0
margin_right = 1014.0
margin_bottom = 24.0
text = "Remove"

[node name="FreePos" type="Node2D" parent="."]
position = Vector2( 0, -26 )
z_index = 1

[node name="TscnDialog" type="FileDialog" parent="FreePos"]
margin_left = 126.932
margin_top = 97.5956
margin_right = 899.932
margin_bottom = 526.596
window_title = "Otw√≥rz plik"
resizable = true
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.tscn" )
